    an error.
  * Don't remove the vboxusers group on upgrades from old package versions.
  * Replace version suffix "OSE" with the distribution name.
  * Switch to source format 3.0 (quilt).
    - Add unapply-patches and abort-on-upstream-changes to local-options.
    - Drop quilt from build-depends and debian/rules.
  * Drop the -ose suffix in the package name.
    - Add transitional packages.

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 22 Apr 2011 11:31:53 +0200

virtualbox-ose (4.0.4-dfsg-2) unstable; urgency=low

  * Fix FTBFS with gcc 4.6. (Closes: #625658, #626148)
    - Add 30-enable-gcc46.patch
    - debian/LocalConfig.kmk: don't treat gcc warnings as errors.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 12 May 2011 15:38:04 +0200

virtualbox-ose (4.0.4-dfsg-1) unstable; urgency=low

  [ Felix Geyer ]
  * New upstream release. (LP: #722431)
  * Drop 30-kernel-2.6.38.diff, applied upstream.
  * Adapt 18-system-xorg.patch to new upstream version.
  * Drop unused lintian overrides.

  [ Patrick Winnertz ]
  * Add if statement around adduser to prevent failure in some cases.
    (Closes: #611604)

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 18 Feb 2011 18:09:29 +0100

virtualbox-ose (4.0.2-dfsg-1) unstable; urgency=low

  * New upstream release. (LP: #709027)
    - Ships with a manual and upstream changelog.
      (Closes: #483702, #541127; LP: #243782)
  * Adapt patches for new upstream version.
  * Add new required build-dependencies:
    default-jdk, genisoimage, makeself, texlive-fonts-extra,
    texlive-fonts-recommended, texlive-latex-extra, texlive-latex-recommended.
  * Set VBOX_JAVA_HOME to /usr/lib/jvm/default-java.
  * Add 28-no-selinux-fedora.patch so VirtualBox doesn't try to install
    selinux-fedora/vbox_x11.pp which is stripped by the dfsg-free target.
  * Update install files.
  * Add 29-fix-ftbfs-as-needed.patch to fix FTBFS with ld --as-needed.
  * Automatically generate the pixmap icon from png.
  * Fix the watch file.
  * Update man pages.