@@ -1,2 +1,5 @@
 [DEFAULT]
 pristine-tar = True
+
+[git-buildpackage]
+compression = bzip2
