@@ -28,6 +28,8 @@ virtualbox (4.0.6-dfsg-1) UNRELEASED; urgency=low
     - Drop quilt from build-depends and debian/rules.
   * Drop the -ose suffix in the package name.
     - Add transitional packages.
+  * Compress orig tarball with bzip2.
+  * Drop support for building on lenny.
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 22 Apr 2011 11:31:53 +0200
 
